[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "common-arrow"
publish = false
version = "0.1.0"

[lib]
doctest = false
test = false

[features]
arrow-default = [
    "arrow/compute",
    "arrow/regex",
    "arrow/io_csv",
    "arrow/io_parquet",
    "arrow/io_json",
    "arrow/io_flight",
    "arrow/compute_filter",
]
default = ["arrow-default", "parquet-default"]
parquet-default = [
    "parquet2/lz4",
    "parquet2/zstd",
    "parquet2/snappy",
    # this feature can't be built in musl
    # "parquet2/gzip_zlib_ng",
    "parquet2/brotli",
]
simd = ["arrow/simd"]

[dependencies] # In alphabetical order
# Workspace dependencies

# Crates.io dependencies
arrow = { git = "https://github.com/jorgecarleitao/arrow2", rev = "b073454", package = "arrow2", default-features = false, features = [
    "arrow",
    "io_parquet",
    "io_parquet_compression",
    "serde_types",
] }

arrow-format = { workspace = true }
futures = "0.3.24"
#native = { package = "strawboat", git = "https://github.com/sundy-li/strawboat", rev = "f3114b" }
parquet2 = { version = "0.17.0", default_features = false, features = ["serde_types"] }

#base64 = { version = "0.21.0", optional = true }
base64 = "0.21.0"
#comfy-table = { version = "6.0", optional = true, default-features = false }
comfy-table = "6.0"
#lexical-core = { version = "0.8", optional = true }
lexical-core = "0.8"
#regex = { version = "1.9", optional = true }
regex = "1.9"
#regex-syntax = { version = "0.7", optional = true }
regex-syntax = "0.7"
#strength_reduce = { version = "0.2", optional = true }
strength_reduce = "0.2"
#itertools = { version = "^0.10", optional = true }
itertools = "^0.10"
#multiversion = { version = "0.7.3", optional = true }
multiversion = "0.7.3"
#memchr = { version = "2.6", optional = true }
memchr = "2.6"

[dev-dependencies]
