[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "common-arrow"
publish = false
version = "0.1.0"

[lib]
doctest = false
test = false

[features]
#arrow-default = [
#    "arrow/compute",
#    "arrow/regex",
#    "arrow/io_csv",
#    "arrow/io_parquet",
#    "arrow/io_json",
#    "arrow/io_flight",
#    "arrow/compute_filter",
#]
#default = ["arrow-default", "parquet-default"]
default = ["parquet-default"]
parquet-default = [
    "parquet2/lz4",
    "parquet2/zstd",
    "parquet2/snappy",
    # this feature can't be built in musl
    # "parquet2/gzip_zlib_ng",
    "parquet2/brotli",
]
#simd = ["arrow/simd"]
simd = []



[dependencies] # In alphabetical order
# Workspace dependencies

# Crates.io dependencies
#arrow = { git = "https://github.com/jorgecarleitao/arrow2", rev = "b073454", package = "arrow2", default-features = false, features = [
#    "arrow",
#    "io_parquet",
#    "io_parquet_compression",
#    "serde_types",
#] }

arrow-format = { workspace = true }
futures = "0.3.24"
#native = { package = "strawboat", git = "https://github.com/sundy-li/strawboat", rev = "f3114b" }
parquet2 = { version = "0.17.0", default_features = false, features = ["serde_types", "async"] }

#base64 = { version = "0.21.0", optional = true }
base64 = "0.21.0"
#comfy-table = { version = "6.0", optional = true, default-features = false }
comfy-table = "6.0"
#lexical-core = { version = "0.8", optional = true }
lexical-core = "0.8"
#regex = { version = "1.9", optional = true }
regex = "1.9"
#regex-syntax = { version = "0.7", optional = true }
regex-syntax = "0.7"
#strength_reduce = { version = "0.2", optional = true }
strength_reduce = "0.2"
#itertools = { version = "^0.10", optional = true }
itertools = "^0.10"
#multiversion = { version = "0.7.3", optional = true }
multiversion = "0.7.3"
#memchr = { version = "2.6", optional = true }
memchr = "2.6"
bytemuck = { version = "1", features = ["derive"] }
num = { version = "0.4", default-features = false, features = ["std"] }
ethnum = "1"
num-traits = "0.2"
chrono = { version = "0.4.31", default_features = false, features = ["std"] }
chrono-tz = { version = "0.8", optional = true }
ahash = { version = "0.8", default-features = false, features = [
        "std",
        "runtime-rng",
] }
dyn-clone = "1"
either = "1.9"
foreign_vec = "0.1.0"
simdutf8 = "0.1.4"
lz4 = { version = "1.23.1" }
zstd = { version = "0.11" }
snap = { version = "1.1.0" }
seq-macro = { version = "0.3", default-features = false }
log = "0.4.16"
env_logger = "0.9.0"
byteorder = "^1.4"
roaring = "0.10.1"
hashbrown = { version = "0.13", default-features = false }
bytes = "^1"
rand = "0.8.5"
ringbuffer = "0.14.2"
ordered-float = "3.7.0"
bitpacking = "0.8.0"
serde = "1.0.151"
serde_json = "1.0.89"
#serde_derive = { version = "^1.0", optional = true }
serde_derive = "^1.0"


[dev-dependencies]
